# supp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cool-ideas.md  cool-ideassssssssssssss.md  deny.toml  future.md  install.ps1  install.sh  roadmap.md  tarpaulin.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/ctx/: SKILL.md
.claude/skills/diff/: SKILL.md
.claude/skills/sym/: SKILL.md
.claude/skills/todo/: SKILL.md
.claude/skills/tree/: SKILL.md
.claude/skills/why/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: completions.md  config.md  context.md  deps.md  diff.md  examples.md  mcp.md  perf.md  skills.md  sym.md  todo.md  tree.md  why.md
examples/c/include/: shapes.h
examples/c/src/: main.c  shapes.c
examples/cpp/include/: circle.hpp  rect.hpp  shape.hpp
examples/cpp/src/: circle.cpp  main.cpp  rect.cpp
examples/go/: models.go  service.go
examples/java/: BaseEntity.java  Project.java  ProjectService.java  Role.java  User.java  Validatable.java  ValidationResult.java
examples/javascript/: app.js  helpers.js
examples/python/: cli.py  models.py  service.py
examples/rust/: models.rs  service.rs
examples/tsx/: App.tsx  Button.tsx  UserCard.tsx  hooks.tsx  types.tsx
examples/typescript/: models.ts  service.ts  store.ts
skills/ctx/: SKILL.md
skills/diff/: SKILL.md
skills/sym/: SKILL.md
skills/tree/: SKILL.md
skills/why/: SKILL.md
src/: cli.rs  compress.rs  config.rs  context.rs  ctx.rs  deps.rs  git.rs  main.rs  mcp.rs  pick.rs  self_update.rs  styles.rs  symbol.rs  todo.rs  tree.rs  why.rs
src/compress/: map.rs  mod.rs
src/why/: call_sites.rs  definition.rs  deps.rs  doc.rs  hierarchy.rs  imports.rs  mod.rs
