[package]
name = "supp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
arboard = "3"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4"
colored = "2"
ignore = "0.4.25"
regex = "1"
tiktoken-rs = "0.9"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
bincode = "1"
serde = { version = "1", features = ["derive"] }
gix = { version = "0.80", default-features = false, features = ["status", "revision"] }
gix-status = "0.27" # must match version used by gix; needed for EntryStatus/Change types
strsim = "0.11"
crossterm = "0.28"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
