[package]
name = "supp"
description = "Supp, here is your context"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/AndrewPBerg/supp/"
readme = "README.md"
keywords = ["cli", "context", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4"
colored = "3"
ignore = "0.4.25"
regex = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
wincode = { version = "0.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
gix = { version = "0.80", default-features = false, features = ["status", "revision"] }
gix-status = "0.27" # must match version used by gix; needed for EntryStatus/Change types
strsim = "0.11"
crossterm = "0.29"

serde_json = "1"
ureq = { version = "3", features = ["json"] }
rayon = "1.11.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3"

[dev-dependencies]
tempfile = "3"
